--- a/requirements.yml
+++ b/requirements.yml
@@ -23,6 +23,8 @@ collections:
     version: 3.1.2
   - name: community.windows
     version: 2.3.0
+  - name: kubernetes.core
+    version: 5.1.0
   - name: prometheus.prometheus
     version: 0.24.1
 
